[gd_scene load_steps=2 format=3 uid="uid://debug_panel"]

[ext_resource type="Script" path="res://scripts/debug/debug_panel.gd" id="1_debug"]

[node name="DebugPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
script = ExtResource("1_debug")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="Margin" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/Panel/Margin/VBox"]
layout_mode = 2
text = "DEBUG PANEL"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Sep1" type="HSeparator" parent="CenterContainer/Panel/Margin/VBox"]
layout_mode = 2

[node name="ResetSaveBtn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Save Sifirla"

[node name="FillEnergyBtn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Enerji Doldur"

[node name="AddCharm10Btn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "+10 Charm"

[node name="AddCharm100Btn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "+100 Charm"

[node name="Sep2" type="HSeparator" parent="CenterContainer/Panel/Margin/VBox"]
layout_mode = 2

[node name="AddCoin100Btn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "+100 Coin"

[node name="AddCoin1000Btn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "+1000 Coin"

[node name="EndRoundBtn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Turu Bitir"

[node name="Sep3" type="HSeparator" parent="CenterContainer/Panel/Margin/VBox"]
layout_mode = 2

[node name="CloseBtn" type="Button" parent="CenterContainer/Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
text = "Kapat"
